--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "firebase": "^4.2.0"
+    "firebase": "^4.2.0",
+    "gh-pages": "^1.0.0"
   }
 }
